tests/expectations/compiler/group/mult_by_group_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372120]: Received types `group` and `group` for the operation `*`.
    --> compiler-test:5:16
     |
   5 |         return (_, _)group * a;
     |                ^^^^^^^^^^^^^^^
     |
     = Valid operands are two integers of the same type, two fields, or a scalar and a group.
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
